--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,13 +1,17 @@
 name: android-test
+env:
+  CI: true
 
-on:
-  push:
-    branches: [ develop, master ]
-  pull_request:
-    branches: [ develop, master ]
+on: [push]
+
+#on:
+#  push:
+#    branches: [ develop, master ]
+#  pull_request:
+#    branches: [ develop, master ]
 
 jobs:
-  build-test:
+  test:
     if: github.event.pull_request.draft == false
     runs-on: [ self-hosted, macOS, ARM64 ]
     strategy:
@@ -16,7 +20,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
@@ -45,3 +49,28 @@ jobs:
           show: "all"
         if: always()
 
+  build:
+    if: github.event.pull_request.draft == false
+    runs-on: [ self-hosted, macOS, ARM64 ]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Set current date as env variable
+        run: echo "DATE_TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      - name: Prepare Environment
+        uses: ./.github/actions/prepare-env
+
+      - name: Build
+        working-directory: android
+        run: ./gradlew app:assembleRelease
+
+      - name: Upload APK dev release
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.DATE_TODAY }} - Xaman - dev APK(s) generated
+          path: android/app/build/outputs/apk/release/
