--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,10 +1,14 @@
 name: ios-test
+env:
+  CI: true
 
-on:
-  push:
-    branches: [ develop, master ]
-  pull_request:
-    branches: [ develop, master ]
+on: [push]
+
+#on:
+#  push:
+#    branches: [ develop, master ]
+#  pull_request:
+#    branches: [ develop, master ]
 
 jobs:
   build-test:
@@ -15,7 +19,7 @@ jobs:
         ios: [ 17.4 ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
