--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -1,10 +1,14 @@
 name: jest-test
+env:
+  CI: true
 
-on:
-  push:
-    branches: [ develop, master ]
-  pull_request:
-    branches: [ develop, master ]
+on: [push]
+
+#on:
+#  push:
+#    branches: [ develop, master ]
+#  pull_request:
+#    branches: [ develop, master ]
 
 jobs:
   test:
@@ -12,7 +16,7 @@ jobs:
     runs-on: [ self-hosted, macOS, ARM64 ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
@@ -20,9 +24,7 @@ jobs:
         uses: ./.github/actions/prepare-env
 
       - name: Run tests
-        run: npx jest --coverage --coverageReporters json-summary --forceExit --detectOpenHandles
-        env:
-          CI: true
+        run: npx jest --coverage --forceExit --detectOpenHandles
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
