--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,9 +168,13 @@ android {
         }
     }
 
+
+
     // building in CI, change the singing config for release to debug
-    if (System.getenv("CI") === "true"){
-        println 'WARNING: Replacing the release config with debug as build is running inside CI'
+    if (System.getenv("CI")){
+        println '!!!!!!!!!!!!!!!!!!!!!!!! WARNING !!!!!!!!!!!!!!!!!!!!!!!!'
+        println '!!! Replacing the release config with debug as build is running inside CI !!!'
+        println '!!!!!!!!!!!!!!!!!!!!!!!! WARNING !!!!!!!!!!!!!!!!!!!!!!!!'
         buildTypes.release.signingConfig = signingConfigs.debug
     }
 
