--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,11 @@
-name: android-test
+name: android
 env:
   CI: true
 
 on: [push]
 
-#on:
-#  push:
-#    branches: [ develop, master ]
-#  pull_request:
-#    branches: [ develop, master ]
-
 jobs:
-  prepare:
+  build-test:
     if: github.event.pull_request.draft == false
     runs-on: [ self-hosted, macOS, ARM64 ]
     steps:
@@ -23,15 +17,14 @@ jobs:
       - name: Prepare Environment
         uses: ./.github/actions/prepare-env
 
-  test:
-    if: github.event.pull_request.draft == false
-    needs: [prepare]
-    runs-on: [ self-hosted, macOS, ARM64 ]
-    strategy:
-      matrix:
-        api-level: [ 34 ]
+      - name: Get version details from build.gradle
+        run: |
+          VERSION_CODE=$(awk -F'=' '/canonicalVersionCode/ {print $2; exit}' android/app/build.gradle | tr -d ' ')
+          VERSION_NAME=$(awk -F'=' '/canonicalVersionName/ {print $2; exit}' android/app/build.gradle | tr -d ' ' | tr -d '"')
+          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+          echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
+          echo "TIMESTAMP=$(date +%s)" >> $GITHUB_ENV
 
-    steps:
       - name: Build tests
         working-directory: android
         run: ./gradlew app:assembleAndroidTest
@@ -39,7 +32,7 @@ jobs:
       - name: Run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.api-level }}
+          api-level: 34
           avd-name: ci-actions-avd
           target: google_apis
           arch: arm64-v8a
@@ -54,21 +47,15 @@ jobs:
           show: "all"
         if: always()
 
-  build:
-    if: github.event.pull_request.draft == false
-    runs-on: [ self-hosted, macOS, ARM64 ]
-    needs: [ prepare, test ]
-
-    steps:
       - name: Set current date as env variable
-        run: echo "DATE_TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+        run:
 
-      - name: Build
+      - name: Build APK
         working-directory: android
         run: ./gradlew app:assembleRelease --quiet
 
       - name: Upload APK dev release
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.DATE_TODAY }} - Xaman - dev APK(s) generated
+          name: ${{ env.TIMESTAMP }}_Xaman_${{ env.VERSION_NAME }}_${{ env.VERSION_CODE }} APK(s)
           path: android/app/build/outputs/apk/release/
