--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,4 @@
-name: e2e-test
+name: e2e
 env:
   CI: true
   DETOX_CONFIGURATION: ios.simulator+xaman.ios
@@ -12,7 +12,7 @@ on: [push]
 #    branches: [ develop, master ]
 
 jobs:
-  build-run:
+  build-test:
     if: github.event.pull_request.draft == false
     runs-on: [ self-hosted, macOS, ARM64 ]
 
@@ -39,7 +39,7 @@ jobs:
 
       - name: Upload artifact files
         if: ${{ always() }}
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: artifact
+          name: e2e artifact
           path: e2e/artifacts/
